--- a/hmt1developerexamples/src/main/res/values/strings.xml
+++ b/hmt1developerexamples/src/main/res/values/strings.xml
@@ -49,4 +49,6 @@
     <string name="speak_now">Speak Now</string>
     <string name="bnf_help">Please say the time <p></p><p></p> Example: One Forty Five</string>
 
+    <string name="test_bnf"><![CDATA[hf_no_number|hf_broadcast_results|hf_override:#BNF+EM V2.0;!grammar Commands;!start <Commands>;<Commands>:<global_commands>|<Hour> !optional(<Minute>);<Minute>:1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24|25|26|27|28|29|30|31|32|33|34|35|36|37|38|39|40|41|42|43|44|45|46|47|48|49|50|51|52|53|54|55|56|57|58|59;<Hour>:1|2|3|4|5|6|7|8|9|10|11|12|13|14|15|16|17|18|19|20|21|22|23|24;]]></string>
+
 </resources>
