--- a/hmt1developerexamples/src/main/res/values/strings.xml
+++ b/hmt1developerexamples/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
 
     <!-- Main Screen Commands -->
     <string name="action_button_command">Action Button</string>
-    <string name="camera_command">Camera Applet</string>
+    <string name="camera_command">Camera Applet (Photo)</string>
+    <string name="video_command">Camera Applet (Video)</string>
     <string name="document_command">Document Applet</string>
     <string name="movie_command">Movie Applet</string>
     <string name="barcode_command">Barcode Applet</string>
@@ -23,6 +24,10 @@
 
     <!-- Resources for Camera Activity -->
     <string name="camera_button_label">Launch Camera</string>
+
+    <!-- Resources for VideoRecordingActivity -->
+    <string name="basic_video_button_label">Launch Camera (Android 6)</string>
+    <string name="provider_video_button_label">Launch Camera (Android 8)</string>
 
     <!-- Resources for Document Activity -->
     <string name="document_button_label">Launch Document Viewer</string>
