--- a/hmt1developerexamples/src/main/res/values/strings.xml
+++ b/hmt1developerexamples/src/main/res/values/strings.xml
@@ -3,8 +3,7 @@
 
     <!-- Main Screen Commands -->
     <string name="action_button_command">Action Button</string>
-    <string name="camera_command">Camera Applet (Photo)</string>
-    <string name="video_command">Camera Applet (Video)</string>
+    <string name="camera_command">Camera Applet</string>
     <string name="document_command">Document Applet</string>
     <string name="movie_command">Movie Applet</string>
     <string name="barcode_command">Barcode Applet</string>
@@ -22,12 +21,9 @@
     <!-- Resources for Action Button Activity -->
     <string name="action_button_label">Press the Action Button!</string>
 
-    <!-- Resources for Camera Photo Activity -->
-    <string name="camera_button_label">Launch Camera</string>
-
-    <!-- Resources for Camera Video Activity -->
-    <string name="basic_video_button_label">Launch Camera (default location)</string>
-    <string name="provider_video_button_label">Launch Camera (specified location)</string>
+    <!-- Resources for Camera Activity -->
+    <string name="camera_button_label_basic">Bitmap Camera</string>
+    <string name="camera_button_label_fileprovider">File Provider Camera</string>
 
     <!-- Resources for Document Activity -->
     <string name="document_button_label">Launch Document Viewer</string>
