--- a/hmt1developerexamples/src/main/res/values/strings.xml
+++ b/hmt1developerexamples/src/main/res/values/strings.xml
@@ -49,4 +49,7 @@
     <string name="show_help_hint">Say \"Show Help\" to see available commands</string>
     <string name="speak_now">Speak Now</string>
     <string name="bnf_help">Please say the time <p></p><p></p> Example: One Forty Five</string>
+
+    <!-- Resources for Audio Capture Activity -->
+    <string name="permissions_error">This activity cannot launch without required permissions.</string>
 </resources>
