--- a/hmt1developerexamples/src/main/res/values/strings.xml
+++ b/hmt1developerexamples/src/main/res/values/strings.xml
@@ -22,8 +22,10 @@
     <string name="action_button_label">Press the Action Button!</string>
 
     <!-- Resources for Camera Activity -->
-    <string name="camera_button_label_basic">Bitmap Camera</string>
-    <string name="camera_button_label_fileprovider">File Provider Camera</string>
+    <string name="camera_button_bitmap_photo">Bitmap Photo</string>
+    <string name="camera_button_file_provider_photo">File Provider Photo</string>
+    <string name="camera_button_basic_video">Basic Video</string>
+    <string name="camera_button_file_provider_video">File Provider Video</string>
 
     <!-- Resources for Document Activity -->
     <string name="document_button_label">Launch Document Viewer</string>
